build: update test running to not raise errors on JDK11